<resources>
    <string name="app_name">solom_clickt</string>
    <string name="txt_test">AAWg5</string>
    <string name="sample_time_09_00">09:00</string>
<string name="txt_0_5u">0.5 U</string>
<string name="txt_12ampm">12 hour (am/pm)</string>
<string name="txt_12h">12 hour</string>
<string name="txt_12hours">12 hours</string>
<string name="txt_12hram">am</string>
<string name="txt_12hrpm">pm</string>
<string name="txt_14days">14 days</string>
<string name="txt_1day">1 day</string>
<string name="txt_1dayinterval">Daily</string>
<string name="txt_1u">1 U</string>
<string name="txt_24h">24 hour</string>
<string name="txt_2daysinterval">Every 2 days</string>
<string name="txt_30days">30 days</string>
<string name="txt_3days">3 days</string>
<string name="txt_3daysinterval">Every 3 days</string>
<string name="txt_60days">60 days</string>
<string name="txt_6hours">6 hours</string>
<string name="txt_7days">7 days</string>
<string name="txt_90days">90 days</string>
<string name="txt_accuchekcopyright">Copyright © 2016 Roche Diabetes Care GmbH\nACCU-CHEK is a trademark of Roche.</string>
<string name="txt_actingtime">Acting time</string>
<string name="txt_activateflightmodeheadline">Flight mode on</string>
<string name="txt_activateflightmodetext">The diabetes manager cannot remotely control the micropump in flight mode.</string>
<string name="txt_activateflightmodeunpairedtext">Flight mode is currently turned off.\nIf you turn flight mode on, the meter cannot be connected to the insulin pump.</string>
<string name="txt_addbrp">To add a new basal rate profile, tap +.</string>
<string name="txt_addcustombolus">To add a customized bolus, tap +.</string>
<string name="txt_addcustomtbrtext">To add a customized TBR, tap +.</string>
<string name="txt_adviceoptionlabel">Bolus advice options</string>
<string name="txt_aftermeal">After meal</string>
<string name="txt_aftermealreminderinfo">Reminder after a meal \nif a blood glucose result \nis marked as Before meal.</string>
<string name="txt_alarm">Alarm clock</string>
<string name="txt_alarmremindername">Name</string>
<string name="txt_applybloodtext">Touch the drop to the front edge of the test strip.</string>
<string name="txt_attachmicropumptext">Attach the micropump to the infusion assembly.</string>
<string name="txt_autooffcommfailure">Alarms after a specified time period in the event of a communication error with the micropump.</string>
<string name="txt_autooffinactivity">The micropump automatically shuts off insulin delivery after the set duration of inactivity.</string>
<string name="txt_available2">Level</string>
<string name="txt_back">Back</string>
<string name="txt_basalinsulin">Basal insulin</string>
<string name="txt_basalrateprofileincompletetitle">Basal rate profile incomplete</string>
<string name="txt_basalrateprofilename_1">Profile 1</string>
<string name="txt_basalrateprofilename_2">Profile 2</string>
<string name="txt_basalrateprofilename_3">Profile 3</string>
<string name="txt_basalrateprofilename_4">Profile 4</string>
<string name="txt_basalrateprofilename_5">Profile 5</string>
<string name="txt_batteryerrorheadline">Micropump battery error</string>
<string name="txt_beep">Beep</string>
<string name="txt_bell">Bell</string>
<string name="txt_bgaverageslabel">Blood glucose averages</string>
<string name="txt_bgbolusenabledtext">The battery is charged. \n\nYou can now test your blood glucose or use bolus advice.</string>
<string name="txt_bgbolusenabledtitle">BG test and bolus advice active</string>
<string name="txt_bggraphbottomtext">Blood glucose result (mg/dL)</string>
<string name="txt_bghigh">Test after high bG</string>
<string name="txt_bglow">Test after low bG</string>
<string name="txt_bgrecordsnotes">Add</string>
<string name="txt_bgresultnote">Add</string>
<string name="txt_bgtestsounds">Blood glucose test</string>
<string name="txt_bolusadviceinstruction">Including health events:</string>
<string name="txt_bolusadvicescompletetext">All settings for calculating bolus advice are complete.  \n\nYou can now use bolus advice.</string>
<string name="txt_bolusadvicescompletetitle">Configuration complete</string>
<string name="txt_bolusadvicesegmentscompletetext">The time blocks for bolus advice have been set up. \n\nYou can change the time blocks at any time in the settings.</string>
<string name="txt_bolusadvicesegmentscompletetitle">Time blocks complete</string>
<string name="txt_bolusadvicesegmentsheadline">Settings are being copied</string>
<string name="txt_bolusdatalabel">Bolus data</string>
<string name="txt_bolusname">null</string>
<string name="txt_brightnesslabel">Brightness</string>
<string name="txt_calypso">Calypso</string>
<string name="txt_cancelboluscancelallbolus">Cancel all boluses</string>
<string name="txt_cancelbolusextendedheadline">Cancel extended bolus?</string>
<string name="txt_cancelbolusmultiwaveheadline">Cancel multiwave bolus?</string>
<string name="txt_cancelbolusstandardheadline">Cancel standard bolus?</string>
<string name="txt_cannotbeundonetext">This action cannot be undone.</string>
<string name="txt_cannotdeselectreservoirtext">You cannot deselect the reservoir. When you replace the pump base, you must also replace the reservoir.</string>
<string name="txt_cannotdeselectreservoirtitle">Reservoir must be replaced</string>
<string name="txt_carbbe">BE</string>
<string name="txt_carbcc">KE</string>
<string name="txt_carbgrams">g</string>
<string name="txt_carbke">KE</string>
<string name="txt_carbratio2">Carbohydrate ratio</string>
<string name="txt_carbratiodefault">---</string>
<string name="txt_carbunittext">It is only possible to change this setting later using the configuration software. Are you sure you want to continue?</string>
<string name="txt_chargeonly">Charge only</string>
<string name="txt_colon">null</string>
<string name="txt_comma">,</string>
<string name="txt_communicationlosttext">The connection between the diabetes manager and the PC was interrupted. \n\nCheck whether the USB cable is properly connected.</string>
<string name="txt_communicationlosttitle">Connection interrupted</string>
<string name="txt_completebolusadvicelatertext">To finish setting up bolus advice later, select the Bolus settings menu.</string>
<string name="txt_connectionfailedtext">The connection failed. Try again.</string>
<string name="txt_connectionfailedtitle">Connection failed</string>
<string name="txt_connecttopcinfoline">Connect the USB cable. Then, tap Connect.</string>
<string name="txt_connecttopclabel">Connect to PC</string>
<string name="txt_continuesetup">Continue setup</string>
<string name="txt_controllevel1">Control 1</string>
<string name="txt_controllevel1v2">Control 1</string>
<string name="txt_controllevel2">Control 2</string>
<string name="txt_controllevelnoentry">No entry</string>
<string name="txt_controlresultnotok">The test result is outside the permitted concentration range.</string>
<string name="txt_controlresultok">The test result is within the permitted concentration range.</string>
<string name="txt_controltestresultheadline">Control result</string>
<string name="txt_corrected">Bolus - possible</string>
<string name="txt_corrected2">Bolus - possible</string>
<string name="txt_createbasalrateprofileintroheadline">Create basal rate profile</string>
<string name="txt_createbasalrateprofileintrotext">First create a basal rate profile in order to start using the micropump.</string>
<string name="txt_currentvalue">Current value</string>
<string name="txt_custhealthevent_1">Name 1</string>
<string name="txt_custhealthevent_2">Name 2</string>
<string name="txt_custhealthevent_3">Name 3</string>
<string name="txt_custombolusname">Customized</string>
<string name="txt_customhealtheventname_1">Name 1</string>
<string name="txt_customhealtheventname_2">Name 2</string>
<string name="txt_customhealtheventname_3">Name 3</string>
<string name="txt_customized1">Name 1</string>
<string name="txt_customized2">Customized 2</string>
<string name="txt_customized3">Customized 3</string>
<string name="txt_customreminder1_text">null</string>
<string name="txt_customreminder1_title">Name 1</string>
<string name="txt_customremindername">Name 1</string>
<string name="txt_customtbrname1">Name of TBR 1</string>
<string name="txt_customtbrname2">Name of TBR 2</string>
<string name="txt_daily">Daily</string>
<string name="txt_dailyinsulintotal">Total daily dose:</string>
<string name="txt_dailysegmentendtime">End time</string>
<string name="txt_dailysegmentscompletetitle">Time blocks complete</string>
<string name="txt_dailysegmentsheadline">Copy settings</string>
<string name="txt_dailysegmentsintroinfo">The settings were copied. \n\nNext, the day will be divided into time blocks.</string>
<string name="txt_dailysegmentspostinfo">The settings were copied to all time blocks. \n\nYou can adjust the settings for the individual time blocks later, as required.</string>
<string name="txt_dailytotalslabel">Total daily dose</string>
<string name="txt_dataneededheadline">Additional entries required</string>
<string name="txt_dataneededtext">Fill in all entry fields before continuing.</string>
<string name="txt_dataoptionslabel">Data options</string>
<string name="txt_datetimemismatchtext">The date and time set in the diabetes manager do not match the date and time set on the micropump. Set the date and time.</string>
<string name="txt_days">days</string>
<string name="txt_daysuntilexpirylabel">Micropump remain. running time (days)</string>
<string name="txt_deactivateflightmodeheadline">Turn off flight mode on pump</string>
<string name="txt_deactivateflightmodetext">Turn off flight mode on the micropump too using the quick bolus buttons.</string>
<string name="txt_deactivateflightmodeunpairedtext">Flight mode is currently turned on.\nIf you turn flight mode off, the meter can be connected to the insulin pump.</string>
<string name="txt_delayedlabel">Delayed amount</string>
<string name="txt_delayedlabel2">Delayed</string>
<string name="txt_delivered">Delivered</string>
<string name="txt_delivermanualmpheadline">Deliver quick bolus</string>
<string name="txt_delivermanualmptext">Press the quick bolus buttons with the currently set insulin increment:</string>
<string name="txt_delivermanualmptext1">Press the quick bolus buttons with the currently set insulin increment:</string>
<string name="txt_deliverpenheadline">Deliver bolus</string>
    <string name="cd_main_btn1">Button1</string>
    <string name="cd_main_btn2">Button2</string>
    <string name="cd_main_btn3">Button3</string>
    <string name="cd_main_btn4">Button4</string>
    <string name="cd_main_btn5">Button5</string>
    <string name="cd_main_btn6">Button6</string>
    <string name="cd_main_btn7">Button7</string>
    <string name="cd_main_btn8">Button8</string>
    <string name="cd_main_btn9">Button9</string>
    <string name="cd_main_btn10">Button10</string>
    <string name="cd_main_btn11">Button11</string>
    <string name="cd_main_btn12">Button12</string>
    <string name="cd_bg_value">BGValue</string>
    <string name="cd_bg_date">BGDate</string>
    <string name="cd_bg_unit">BGUnit</string>
    <string name="cd_leftfooterbutton">Left_Footer_Button</string>
    <string name="cd_rightfooterbutton">Right_Footer_Button</string>
    <string name="cd_centerfooterbutton">Center_Footer_Button</string>
    <string name="cd_edit1">Edit1</string>
    <string name="cd_label1">Label1</string>
    <string name="cd_bg_hyper_hypo">bGValue_HyperHypo</string>
    <string name="cd_bg_circle">bGValue_Circle</string>
    <string name="cd_unit">Unit</string>
    <string name="cd_value">Value</string>
    <string name="cd_signal">Signal</string>
    <string name="cd_temperature">Temperature</string>
    <string name="cd_flight">Flight</string>
    <string name="cd_bluetooth">Bluetooth</string>
    <string name="cd_battery">Battery</string>
    <string name="cd_time">Time</string>
    <string name="cd_silent">Silent</string>
</resources>