<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/status_bar_h">

    <View
        android:id="@+id/viewStatusBarHandleBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/layoutStatusBarInfo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewStatusBarSignalSuspension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/cd_signal"
            android:src="@drawable/status_signal_suspension" />

        <ImageView
            android:id="@+id/imageViewStatusBarTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="1dp"
            android:contentDescription="@string/cd_temperature"
            android:src="@drawable/status_temperature" />

        <ImageView
            android:id="@+id/imageViewSlidingPanelStatusBarSilent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="1dp"
            android:contentDescription="@string/cd_silent"
            android:src="@drawable/status_silent" />

        <ImageView
            android:id="@+id/imageViewStatusBarFlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/cd_flight" />

        <ImageView
            android:id="@+id/imageViewStatusBarBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="1dp"
            android:contentDescription="@string/cd_bluetooth"
            android:src="@drawable/status_no_comms" />
        
                <ImageView
                    android:id="@+id/imageViewStatusBarBattery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="1dp"
                    android:contentDescription="@string/cd_battery"
                    android:src="@drawable/status_battery_full" />

        <com.accu_chek.solo_m.rcapp.application.gui.ui.FontManager
            android:id="@+id/textViewStatusBarTime"
            style="@style/st_font_Popup_Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/cd_time"
            android:gravity="center_vertical|right"
            android:text="@string/sample_time_09_00"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>