<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
<LinearLayout 
    android:id="@+id/id_button_b25"
    style="@style/st_button_horizontal_default_margin_fixed"
    android:layout_height="63dp">

<com.accu_chek.solo_m.rcapp.application.gui.ui.FontManager
                       style="@style/st_font_Default"

android:id="@+id/id_b25_text"
        android:layout_width="118dp"
        android:layout_height="match_parent"
        android:layout_marginStart="22dp"
                            android:maxLines="2"

android:gravity="center_vertical"
        android:text="advice"
               android:textColor="@color/main_grey" 

android:contentDescription="@string/cd_label1"
/>

<RelativeLayout 
        android:layout_height="match_parent"
        android:layout_width="148dp">

    <com.accu_chek.solo_m.rcapp.application.gui.ui.FontManager
        android:id="@+id/id_b25_insulin"
        style="@style/st_font_Insulin_Total"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:layout_marginStart="33dp"
        android:contentDescription="@string/cd_value"
        android:gravity="end|center_vertical"
        android:lines="1"
        android:maxLines="1"
        android:maxWidth="72dp"
        android:minLines="1"
        android:text="0.0"
        android:width="72dp"                 android:textColor="@color/main_grey" />

    <com.accu_chek.solo_m.rcapp.application.gui.ui.FontManager
        android:id="@+id/id_b25_value"
        style="@style/st_font_Value"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBaseline="@+id/id_b25_insulin"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/id_b25_insulin"
        android:contentDescription="@string/cd_unit"
        android:text="U"                 android:textColor="@color/main_grey"/>
    
    </RelativeLayout>
    
</LinearLayout>
</FrameLayout>
